--- a/package.json
+++ b/package.json
@@ -5,7 +5,9 @@
   "scripts": {
     "start": "node ./bin/www"
   },
-  "engines": { "node": ">=16.0.0" }
+  "engines": { 
+    "node": ">=18.0.0" 
+  },
   "dependencies": {
     "cookie-parser": "~1.4.4",
     "debug": "~2.6.9",
